--- a/investingguideandroidui/app/build.gradle
+++ b/investingguideandroidui/app/build.gradle
@@ -44,6 +44,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation 'androidx.cardview:cardview:1.0.0'
-
+    implementation 'com.jjoe64:graphview:4.2.2'
 
 }
