--- a/investingguideandroidui/app/src/main/AndroidManifest.xml
+++ b/investingguideandroidui/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:screenOrientation="portrait">
+            android:screenOrientation="unspecified">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -25,7 +25,14 @@
         </activity>
 
         <activity android:name=".SecuritiesViewActivity"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="unspecified"></activity>
+
+        <!-- Sample AdMob app ID: ca-app-pub-3940256099942544~3347511713 -->
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-7397609705602882~6050838496"/>
+
+
     </application>
 
 </manifest>
